# Dungeon-Crawler

./: .gitignore  CMakeLists.cpack  CMakeLists.txt  ChangeLog.txt  Doxyfile  DungeonCrawler.nunit  DungeonCrawler.psess  DungeonCrawler.sln  DungeonCrawler.vcxproj  DungeonCrawler.vcxproj.filters  Makefile  README.txt  TODO.txt  TestResult.xml  UpgradeLog2.htm  configure  copying.txt  ideas.txt  readme.md  thanks.txt  todo.txt  use.txt
src/: CMakeLists.txt  Doxyfile  appconfig.cpp  appconfig.h  camera.h  config.h  door.h  dungeon.cpp  dungeoncrawler.cpp  dungeoncrawler.h  inputmanager.cpp  inputmanager.h  level.cpp  level.h  point.h  rect.h  room.cpp  room.h  roomgenerator.h  sdlclient.cpp  tile.cpp  tile.h  tilegrid.cpp  tilegrid.h  tiletype.h  utils.cpp  utils.h  version.h  version.h.in  world.h
src/Client/: Dungeon Crawler Client.csproj  DungeonCrawler.Designer.cs  DungeonCrawler.cs  DungeonCrawler.settings  ErrorDialog.cs  Program.cs  Settings.Designer.cs  Settings.settings  app.config
src/Client/Actions/: ActionCastSpell.cs  ActionDeath.cs  ActionRangedAttack.cs  ActionSlashAttack.cs
src/Client/Game/: DungeonCrawler.cs  TempBlueprintProvider.cs
src/ContentPipeline/: Game Content Pipeline.csproj  SpriteContentProcessor.cs  SpriteDataContent.cs  SpriteDataWriter.cs  SpriteFileImporter.cs
src/ContentPipeline/Properties/: AssemblyInfo.cs
src/ContentPipelineLib/: AnimationData.cs  CommonTypes.cs  Game Content Lib.csproj  SpriteData.cs
src/ContentPipelineLib/Exceptions/: InvalidGameDataException.cs
src/ContentPipelineLib/Properties/: AssemblyInfo.cs
src/DungeonCrawler/: ActorEquipmentSlot.cs  DungeonCrawler.csproj  DungeonCrawlerGame.cs  Input.cs  TileHelpers.cs
src/DungeonCrawler/Actions/: ActionCastSpell.cs  ActionDeath.cs  ActionRangedAttack.cs  ActionSlashAttack.cs
src/DungeonCrawler/Levels/: DungeonLevel.cs
src/Forge/: Constants.cs  DirectionName.cs  Forge.csproj  ForgeException.cs  GameScene.cs  Globals.cs  HelperClasses.cs  IGameScene.cs  Interpolation.cs  MathHelper.cs  Matrix3.cs  Point.cs  RectF.cs  SizeF.cs  Vector.cs
src/Forge.Tests/: AssertHelper.cs  Forge.Tests.csproj  InterpolationTests.cs  MatrixTests.cs  MersenneTwisterTests.cs  PairTests.cs  Point2Tests.cs  RectFTests.cs  StringExtensionMethodsTests.cs  StringUtilsTests.cs  Vector3Tests.cs  Vector4Tests.cs
src/Scott.DungeonCrawler/: ActorEquipmentSlot.cs  DungeonCrawler.cs  DungeonCrawlerBlueprintFactory.cs  DungeonCrawlerGame.cs  Scott.DungeonCrawler.csproj  TileHelpers.cs
src/Scott.DungeonCrawler.Client/: DungeonCrawler.Client.csproj  ErrorDialog.Designer.cs  ErrorDialog.cs  ErrorDialog.resx  Program.cs  Scott.DungeonCrawler.Client.csproj  Scott.DungeonCrawler.Client_TemporaryKey.pfx  Settings.Designer.cs  app.config  app.xsd  packages.config  todo.txt
src/Scott.Forge/: BoundingArea.cs  BoundingRect.cs  Constants.cs  DirectionName.cs  DirectionName.cs~RF533bcc.TMP  ExtensionMethods.cs  ForgeException.cs  GameRoot.cs  GameScene.cs  Globals.cs  HelperClasses.cs  IContentManager.cs  IGameScene.cs  IRecyclable.cs  InstancePool.cs  Interpolation.cs  MathHelper.cs  Matrix.cs  MersenneTwister.cs  Pair.cs  ParentableNode.cs  ParentingException.cs  Point.cs  Random.cs  RectF.cs  RectangleF.cs  Scott.Forge.csproj  SizeF.cs  Vector.cs  Vector2.cs  Vector3.cs  Vector4.cs  project.lock.json
src/Scott.Forge.Engine/: Constants.cs  ForgeExtensions.cs  GameEngineException.cs  GameRoot.cs  GameScene.cs  GameSettings.cs  IDrawable.cs  IUpdatable.cs  Scott.Forge.Engine.csproj
src/Scott.Forge.Engine.Tests/: Scott.Forge.Engine.Tests.csproj  UnitTest1.cs  packages.config
src/Scott.Forge.Game.Tests/: Scott.Forge.Game.Tests.csproj  UnitTest1.cs
src/Scott.Forge.Tests/: AssertHelper.cs  BoundingAreaTests.cs  InstancePoolTests.cs  InterpolationFuncsTests.cs  InterpolationTests.cs  MathHelperTests.cs  MathXTests.cs  MersenneTwisterTests.cs  PairTests.cs  ParentableNodeTests.cs  Point2Tests.cs  PooledComponentProcessorTests.cs  RectFTests.cs  Scott.Forge.Tests.csproj  SizeFTests.cs  StringExtensionMethodsTests.cs  StringUtilsTests.cs  TypeExtensionMethodsTests.cs  Vector2Tests.cs  Vector3Tests.cs  Vector4Tests.cs  packages.config
src/Shared/: BoundingRect.cs  Class1.cs  Dungeon Crawler Shared.csproj
src/WixInstaller/: Config.wxi  Files.wxs  Notes.txt  Product.wxs  WiXInstaller.wixproj
src/client/: clientview.cpp  clientview.h  dungeonclientwindow.cpp  dungeonclientwindow.h  dungeonclientwindow.ui  sprite.cpp  sprite.h  spritedata.cpp  spritedata.h  spriteloader.cpp  spritemanager.cpp  spritemanager.h
src/common/: fixedgrid.h  logging.cpp  logging.h  platform.cpp  platform.h  platform_unix.cpp  platform_vista.cpp  platform_xp.cpp  point.cpp  point.h  random.cpp  random.h  rect.cpp  rect.h  sdlinclude.h  types.h  utils.h  windows.cpp
src/core/: fixedgrid.h  point.h  rect.h
src/defs/: tilematerial.h
src/engine/: actor.cpp  actor.h  actordata.cpp  actordata.h  appconfig.cpp  appconfig.h  camera.cpp  optionsparser.cpp  optionsparser.h  pathfinder.cpp  pathfinder.h  playerinputcontroller.cpp
src/game/: actor.cpp  actor.h  actorcontroller.cpp  actorcontroller.h  dungeon.h  gameplayengine.cpp  gameplayengine.h  level.cpp  level.h  pathfinder.cpp  pathfinder.h  playerinputcontroller.cpp  playerinputcontroller.h  tile.cpp  tile.h  tiledata.h  tilefactory.cpp  tilefactory.h  tileflags.h  tilegrid.cpp  tilegrid.h  tiletype.cpp  tiletype.h  tiletypes.h  world.cpp  world.h
src/graphics/: clientview.cpp  clientview.h  sprite.cpp  sprite.h  spritedata.cpp  spritedata.h  spriteloader.cpp  spriteloader.h  spritemanager.cpp  spritemanager.h
src/worldgen/: bsplevelgen.cpp  bsplevelgen.h  connectiongenerataor.cpp  connectiongenerataor.h  dungeongenerator.cpp  dungeongenerator.h  hallgenerator.cpp  hallgenerator.h  levelgenerator.cpp  levelgenerator.h  roomdata.h  roomgenerator.cpp  roomgenerator.h  worldgenerator.cpp  worldgenerator.h
tests/: CMakeLists.txt  googletestrunner.cpp  test_alwaystrue.cpp  test_fixedgrid.cpp  test_pathfinder.cpp  test_point.cpp  test_rect.cpp  test_tilegrid.cpp  test_utils.cpp
(+612 files in other folders)
